apps/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe
  labels:
    app: fe
spec:
  selector:
    app: fe
  ports:
    - port: 80
      targetPort: 3000
