apps/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe
spec:
  ingressClassName: nginx
  rules:
    - host: fe.devths.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe
                port:
                  number: 80
